# cloud-infra-auditor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Quick_guide.md  README.md  cloudwatch_test.py  ec2_test.py  eip_test.py  pyproject.toml  region_test.py  requirements.txt  test_all_regions.py  test_cloudwatch.py  test_ebs.py  test_ec2.py  test_eip.py  test_idle.py  test_json_exporter.py  test_region.py  test_report.py
.github/workflows/: ci.yml
auditor/: constants.py
auditor/aws/: auth.py  cloudwatch.py  regions.py  session.py
auditor/cleanup/: ebs_cleanup.py  eip_cleanup.py
auditor/cli/: auth.py  aws.py  cleanup.py  main.py  report.py  scan.py
auditor/reports/: csv_exporter.py  json_exporter.py  report_generator.py  report_transformer.py
auditor/scanners/: ebs_scanner.py  ec2_scanner.py  eip_scanner.py
auditor/ui/: summary.py
auditor/utils/: parallel.py  retry.py
docs/: AWS_CONFIG.md
tests/: conftest.py  test_cleanup.py  test_csv_exporter.py  test_ebs_scanner.py  test_ec2_scanner.py  test_eip_scanner.py  test_json_exporter_.py  test_regions.py  test_report_generator.py  test_report_transformer.py  test_session.py
